--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ kramdown:
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : MrSaxon
-tagline: Coding is my life
+title : Saxon
+tagline: Funny Soul
 author :
   name : Saxon
   email : saxon.zh@gmail.com
-  github : MrSaxon
+  github : saxon-zh
   twitter : username
   feedburner : feedname
 
@@ -31,7 +31,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://mrsaxon.github.io
+production_url : http://saxon-zh.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
